    models when between model lacks observations ('swar') and individual or
    time dimension lacks within variation ('amemiya').
  * plm/model.matrix.pFormula: informative error message for non-finite values.
  * summary.purtest: give informative error message when run on purtest object
    containing result for Hadri's test.

  * Addenum: In plm version 1.6-6, aneweytest() was changed to use the residuals
    of the one-way individual within model (was: two-ways within model).


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;
        component 'theta' is now either a numeric (balanced models) or a list with 
        numerics (unbalanced models), the numerics being of length 1 (one-way models)
        or of length equal to the number of observations (two-ways models).
  * model.matrix.*: gained new argument 'cstcovar.rm' to remove specific columns.
  * pmodel.response: now returns object of class c("pseries", "numeric") [was "numeric"].
  * plm:
      * random effect models: some random methods extended to unbalanced 
        two-ways case (Nerlove's method only supports balanced one-way, two-ways),
        thanks to the more general ercomp framework.
      * nested random effects model implemented (Baltagi/Song/Jung (2001)),
        use effect = "nested", see example in ?plm.
      * two-way fixed effects model for unbalanced panels is faster.
      * new argument 'weights' added.
      * fix backward compatibility for the (deprecated!) argument 'instruments'
        to estimate IV models (but rather use 2-part formulae for IV models).
      * plm gives an informative error message if all terms are dropped in an 
        estimation due to aliasing.
      * argument 'inst.method': value "bmc" renamed to "bms" for the Breusch-Mizon-Schmidt
        method ("bmc" was a typo, back-compatible solution implemented).