@@ -1,5 +1,5 @@
 
-R version 3.5.0 (2018-04-23) -- "Joy in Playing"
+R version 3.5.1 (2018-07-02) -- "Feather Spray"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-w64-mingw32/x64 (64-bit)
 
@@ -364,7 +364,7 @@ CEOage 0     0       1
 log(y) ~ lag(log(y), 1) + log(x1) + lag(log(x1), 1) + lag(log(x1), 
     2) + log(x2) + lag(log(x2), 1) + lag(log(x2), 2) + diff(log(x3)) + 
     diff(log(x3), 1) + diff(log(x3), 2)
-<environment: 0x00000000099a8388>
+<environment: 0x000000000b18fa30>
 > 
 > 
 > 
@@ -6856,7 +6856,8 @@ alternative hypothesis: AR(1) errors sub random effects
 > data("Produc", package = "plm")
 > ccepmod <- pcce(log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, data = Produc, model="p")
 > summary(ccepmod)
-Common Correlated Effects model
+Common Correlated Effects Pooled model
+
 Call:
 pcce(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
     data = Produc, model = "p")
@@ -6878,6 +6879,32 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 Total Sum of Squares: 849.81
 Residual Sum of Squares: 0.11927
 HPY R-squared: 0.99077
+> 
+> ccepmod <- pcce(log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, data = Produc, model="mg")
+> summary(ccepmod)
+Common Correlated Effects Mean Groups model
+
+Call:
+pcce(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
+    data = Produc, model = "mg")
+
+Balanced Panel: n = 48, T = 17, N = 816
+
+Residuals:
+      Min.    1st Qu.     Median       Mean    3rd Qu.       Max. 
+-0.0806338 -0.0037117  0.0003147  0.0000000  0.0040207  0.0438957 
+
+Coefficients:
+            Estimate Std. Error z-value  Pr(>|z|)    
+log(pcap)  0.0899850  0.1176039  0.7652   0.44418    
+log(pc)    0.0335784  0.0423362  0.7931   0.42770    
+log(emp)   0.6258659  0.1071719  5.8398 5.225e-09 ***
+unemp     -0.0031178  0.0014389 -2.1668   0.03025 *  
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+Total Sum of Squares: 849.81
+Residual Sum of Squares: 0.056978
+HPY R-squared: 0.99312
 > 
 > 
 > 
@@ -8576,7 +8603,7 @@ alternative hypothesis: serial correlation in idiosyncratic errors
 > zz_wi <- pggls(log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp,
 +                data = Produc, model = "within")
 > summary(zz_wi)
- Within model
+Oneway (individual) effect Within FGLS model
 
 Call:
 pggls(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
@@ -8603,7 +8630,7 @@ Multiple R-squared: 0.99863
 > zz_pool <- pggls(log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
 +                  data = Produc, model = "pooling")
 > summary(zz_pool)
- NA
+Oneway (individual) effect Random FGLS model
 
 Call:
 pggls(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
@@ -8631,7 +8658,7 @@ Multiple R-squared: 0.99111
 > zz_fd <- pggls(log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp,
 +                data = Produc, model = "fd")
 > summary(zz_fd)
- NA
+Oneway (individual) effect First-Difference FGLS model
 
 Call:
 pggls(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp, 
@@ -8640,20 +8667,21 @@ pggls(formula = log(gsp) ~ log(pcap) + log(pc) + log(emp) + unemp,
 Balanced Panel: n = 48, T = 17, N = 816
 
 Residuals:
-     Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
--0.078700 -0.007233  0.005760  0.004556  0.018221  0.104727 
+      Min.    1st Qu.     Median       Mean    3rd Qu.       Max. 
+-0.0847594 -0.0103758  0.0024378  0.0007254  0.0133336  0.1018213 
 
 Coefficients:
-             Estimate  Std. Error z-value  Pr(>|z|)    
-log(pcap)  0.07172150  0.02768373  2.5907  0.009577 ** 
-log(pc)    0.00339678  0.01229449  0.2763  0.782329    
-log(emp)   0.96091335  0.01795985 53.5034 < 2.2e-16 ***
-unemp     -0.00367101  0.00039837 -9.2150 < 2.2e-16 ***
+               Estimate  Std. Error  z-value Pr(>|z|)    
+(Intercept)  0.00942926  0.00106337   8.8673  < 2e-16 ***
+log(pcap)   -0.04400764  0.02911083  -1.5117  0.13060    
+log(pc)     -0.03100727  0.01248722  -2.4831  0.01302 *  
+log(emp)     0.87411813  0.02077388  42.0777  < 2e-16 ***
+unemp       -0.00483240  0.00040668 -11.8825  < 2e-16 ***
 ---
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 Total Sum of Squares: 849.81
-Residual Sum of Squares: 0.36212
-Multiple R-squared: 0.99957
+Residual Sum of Squares: 0.33459
+Multiple R-squared: 0.99961
 > 
 > 
 > 
@@ -12148,6 +12176,13 @@ unemp        0.00016044
 Total Sum of Squares: 21431
 Residual Sum of Squares: 36.691
 Multiple R-Squared: 0.99829
+>              
+> ## Not run: 
+> ##D # replicate Swamy (1970), p. 166, table 5.2
+> ##D data(Grunfeld, package = "AER") # 11 firm Grunfeld data needed from package AER
+> ##D gw <- pvcm(invest ~ value + capital, data = Grunfeld, index = c("firm", "year"))
+> ## End(Not run)
+>              
 > 
 > 
 > 
@@ -12276,7 +12311,7 @@ alternative hypothesis: serial correlation
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  plm.model
-F = 0.9316, df1 = 1, df2 = 749, p-value = 0.3348
+F = 1.5251, df1 = 1, df2 = 749, p-value = 0.2172
 alternative hypothesis: serial correlation in differenced errors
 
 > pwfdtest(log(emp) ~ log(wage) + log(capital), data = EmplUK, h0 = "fe")
@@ -12284,7 +12319,7 @@ alternative hypothesis: serial correlation in differenced errors
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  plm.model
-F = 131.01, df1 = 1, df2 = 749, p-value < 2.2e-16
+F = 131.55, df1 = 1, df2 = 749, p-value < 2.2e-16
 alternative hypothesis: serial correlation in original errors
 
 > 
@@ -12294,7 +12329,7 @@ alternative hypothesis: serial correlation in original errors
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  plm.model
-F = 123.65, df1 = 1, df2 = 749, p-value < 2.2e-16
+F = 123.79, df1 = 1, df2 = 749, p-value < 2.2e-16
 alternative hypothesis: serial correlation in original errors
 
 > 
@@ -12306,7 +12341,7 @@ alternative hypothesis: serial correlation in original errors
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  mod
-F = 0.9316, df1 = 1, df2 = 749, p-value = 0.3348
+F = 1.5251, df1 = 1, df2 = 749, p-value = 0.2172
 alternative hypothesis: serial correlation in differenced errors
 
 > pwfdtest(mod, h0 = "fe")
@@ -12314,7 +12349,7 @@ alternative hypothesis: serial correlation in differenced errors
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  mod
-F = 131.01, df1 = 1, df2 = 749, p-value < 2.2e-16
+F = 131.55, df1 = 1, df2 = 749, p-value < 2.2e-16
 alternative hypothesis: serial correlation in original errors
 
 > pwfdtest(mod, type = "HC3", h0 = "fe")
@@ -12322,7 +12357,7 @@ alternative hypothesis: serial correlation in original errors
 	Wooldridge's first-difference test for serial correlation in panels
 
 data:  mod
-F = 123.65, df1 = 1, df2 = 749, p-value < 2.2e-16
+F = 123.79, df1 = 1, df2 = 749, p-value < 2.2e-16
 alternative hypothesis: serial correlation in original errors
 
 > 
@@ -13360,7 +13395,7 @@ attr(,"se")
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  12.36 1.11 13.5 NA NA 
+Time elapsed:  12.56 1.15 13.73 NA NA 
 > grDevices::dev.off()
 null device 
           1 
